fixed: table header sometimes didn't align correctly

--- a/src/stylesheets/vortex/supertable.scss
+++ b/src/stylesheets/vortex/supertable.scss
@@ -103,7 +103,6 @@
     > * {
       max-height: 0 !important;
       visibility: hidden;
-      padding: 0 !important;
       margin-top: -100%;
     }
   }
